Performance and logo update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <img
         class="logo"
-        src="resources/imgs/goomooPng.png"
+        src="resources/imgs/goomooSVG.svg"
         width="25px"
         height="30px"
         alt="GOOMOO INDIA logo"
