--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
       <article class="landContainer">
         <div class="slider">
           <div class="pic1"></div>
+
           <p class="headText">
-            TRAVEL<br />
-            WITH <br />THE BEST
+            <span class="hd1">TRAVEL</span><br />
+            <span class="hd2" id="hd2">WITH</span> <br />
+            <span class="hd3">THE BEST</span>
           </p>
         </div>
       </article>
