--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <div class="pic1"></div>
 
           <p class="headText">
-            <span class="hd1">TRAVEL</span><br />
-            <span class="hd2" id="hd2">WITH</span> <br />
-            <span class="hd3">THE BEST</span>
+            <span class="hd">TRAVEL</span><br />
+            <span class="hd hd2" id="hd2">WITH</span> <br />
+            <span class="hd">THE BEST</span>
           </p>
         </div>
       </article>
